--- a/index.html
+++ b/index.html
@@ -109,11 +109,21 @@
                                             <li data-autoslide="2000" class="fragment fade-in">Smiling</li>
                                         </ul>
                                     </section>
-                                    <section>I hope this helped. <br> -<a target="_blank" href="http://www.wastevensv.com">Billy</a></section>
+                                </section>
+                                <section>
+                                    <h1>I hope this helped.</h1>
+                                    <section>
+                                        There are no trackers or ads on this page, that is intentional. <br>
+                                        There never will be. <br>
+                                        I'd still love to know if you like this site. <br>
+                                        You can email me at <a href="mailto:okay@wasv.me?subject=I'm Okay.">okay@wasv.me</a>. <br>
+                                        Please note, I'm not a mental health professional or counselor. <br>
+                                        If you are in urgent need of counseling, <a href="https://helpnow.talkspace.com">please seek professional help</a>. <br>
+                                        -<a target="_blank" href="http://www.wasv.me">Billy</a>
+                                    </section>
                                 </section>
                         </div>
                 </div>
-
                 <script src="lib/js/head.min.js"></script>
                 <script src="js/reveal.js"></script>
 
