Updated contact instructions.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                                         I'd still love to know if you like this site. <br>
                                         You can email me at <a href="mailto:okay@wasv.me?subject=I'm Okay.">okay@wasv.me</a>. <br>
                                         Please note, I'm not a mental health professional or counselor. <br>
-                                        If you are in urgent need of counseling, <a href="https://helpnow.talkspace.com">please seek professional help</a>. <br>
+                                        If you are in urgent need of counseling, do not email me for help. <br>
+                                        Please, <a href="https://helpnow.talkspace.com">seek professional help</a> instead. <br>
                                         -<a target="_blank" href="http://www.wasv.me">Billy</a>
                                     </section>
                                 </section>
