--- a/index.html
+++ b/index.html
@@ -113,13 +113,12 @@
                                 <section>
                                     <h1>I hope this helped.</h1>
                                     <section>
-                                        There are no trackers or ads on this page, that is intentional. <br>
-                                        There never will be. <br>
+                                        Please note, I'm not a mental health professional or counselor. <br>
+                                        If you are in urgent need of counseling, do not contact me for help. <br>
+                                        Please, <a href="https://helpnow.talkspace.com">seek professional help</a> instead. <br>
+                                        <br>
                                         I'd still love to know if you like this site. <br>
                                         You can email me at <a href="mailto:okay@wasv.me?subject=I'm Okay.">okay@wasv.me</a>. <br>
-                                        Please note, I'm not a mental health professional or counselor. <br>
-                                        If you are in urgent need of counseling, do not email me for help. <br>
-                                        Please, <a href="https://helpnow.talkspace.com">seek professional help</a> instead. <br>
                                         -<a target="_blank" href="http://www.wasv.me">Billy</a>
                                     </section>
                                 </section>
