--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 
                 <title>You'll be okay.</title>
 
+                <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+                <link rel="icon" type="image/png" href="images/favicon256.png">
+                <link rel="manifest" href="manifest.webapp" />
+                <meta name="apple-mobile-web-app-capable" content="yes" />
+                <meta name="mobile-web-app-capable" content="yes" />
+                <meta name="theme-color" content="#222222" />
+
                 <link rel="stylesheet" href="css/reveal.css">
                 <link rel="stylesheet" href="css/theme/black.css">
 
