--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
                 <title>You'll be okay.</title>
 
-                <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-                <link rel="icon" type="image/png" href="images/favicon256.png">
+                <link rel="shortcut icon" type="image/x-icon" href="images/favicon/favicon.ico">
+                <link rel="icon" type="image/png" href="images/favicon/favicon256.png">
                 <link rel="manifest" href="manifest.webapp" />
                 <meta name="apple-mobile-web-app-capable" content="yes" />
                 <meta name="mobile-web-app-capable" content="yes" />
