Make external links open in new windows

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                                     <section>
                                         Please note, I'm not a mental health professional or counselor. <br>
                                         If you are in urgent need of counseling, do not contact me for help. <br>
-                                        Please, <a href="https://helpnow.talkspace.com">seek professional help</a> instead. <br>
+                                        Please, <a target="_blank" href="https://helpnow.talkspace.com">seek professional help</a> instead. <br>
                                         <br>
                                         I'd still love to know if you like this site. <br>
-                                        You can email me at <a href="mailto:okay@wasv.me?subject=I'm Okay.">okay@wasv.me</a>. <br>
+                                        You can email me at <a target="_blank" href="mailto:okay@wasv.me?subject=I'm Okay.">okay@wasv.me</a>. <br>
                                         -<a target="_blank" href="http://www.wasv.me">Billy</a>
                                     </section>
                                 </section>
